# Contract-review-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  integrity_tests.py  openenv.yaml  pyproject.toml  requirements.txt
Explaination/: Briefing_ Contract Review Reinforcement Learning Environment.docx
data/: contracts.py
models/: action.py  observation.py
server/: app.py  environment.py  graders.py
