[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-env"
version = "1.0.0"
description = "AI-powered contract review RL environment using FastAPI and OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
authors = [
{ name = "Pushkar Khattri" }
]
license = { text = "MIT" }

dependencies = [
"fastapi==0.115.0",
"uvicorn[standard]==0.30.6",
"pydantic==2.11.3",
"websockets==13.0",
"httpx==0.27.2",
"openai==1.51.0",
"python-multipart==0.0.9",
"pyyaml==6.0.2"
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"black>=24.0",
"ruff>=0.5.0",
"mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "models*", "data*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
