[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-env"
version = "1.0.0"
description = "AI-powered contract review RL environment using FastAPI and OpenEnv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"fastapi==0.115.0",
"uvicorn[standard]==0.30.6",
"pydantic==2.11.3",
"websockets>=15.0.1",        # ✅ required by openenv
"httpx==0.27.2",
"openai>=2.7.2",             # ✅ FIXED (was 1.51.0)
"python-multipart==0.0.9",
"pyyaml==6.0.2",
"openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
